# rscode

./: .gitignore  CMakeLists.txt  berlekamp.c  ecc.h  example.c  rs.c
